codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_wraps_enterprise_monthly_credit_details_in_narrow_terminal.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/usage

╭────────────────────────────────────────────╮
│  >_ Elpis (v0.1.0)                         │
│  Model               : gpt-5.1-codex-max ( │
│  Directory           : /workspace/tests    │
│  Permissions         : Custom (workspace w │
│  Token usage         : 1.2K total  (800 in │
│  Context window      : 100% left (1.2K use │
│  Context pruning     : ~0 tokens saved (0% │
│  Monthly credit limit: 68% left            │
│                        (resets 07:08 on    │
│                        7 May)              │
│                        8,000 of 25,000     │
│                        credits used        │
╰────────────────────────────────────────────╯
